样式压缩、微调
样式压缩、微调

--- a/static.hzshuangmei.com/css/m/wuchuang/css.css
+++ b/static.hzshuangmei.com/css/m/wuchuang/css.css
@@ -1,529 +1,2 @@
 @charset "utf-8";
-.uuy p,
-.zixun {
-    text-align: center
-}
-
-.arc,
-.main3 p {
-    text-indent: 2em
-}
-
-.zixun,
-.zixunsj,
-img {
-    display: block
-}
-
-* {
-    margin: 0;
-    padding: 0
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-size: 100%;
-    font-weight: 400
-}
-
-li,
-ul {
-    list-style: none
-}
-
-img {
-    border: 0
-}
-
-body {
-    background-color: #fff;
-    font-family: "微软雅黑"
-}
-
-em {
-    font-style: normal
-}
-
-p,
-span {
-    font-size: 0.5rem
-}
-
-h3 {
-    font-size: 0.6rem
-}
-
-a {
-    color: #fff;
-    border: none;
-    text-decoration: none
-}
-
-.sr-only {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    clip: rect(0, 0, 0, 0);
-    border: 0;
-    overflow: hidden
-}
-
-.main2-top,
-.main5-in,
-.uuy {
-    position: relative
-}
-
-.banner,
-.main1 {
-    width: 100%
-}
-
-.main1,
-.main2,
-.main2-b,
-.main2-top,
-.main2arc {
-    height: auto
-}
-
-.pad10 {
-    padding-top: 10px
-}
-
-.pad20 {
-    padding-top: 0.5rem
-}
-
-.pad30 {
-    padding-top: 0.75rem
-}
-
-.pad50 {
-    padding-top: 1.25rem
-}
-
-.pad60 {
-    padding-top: 1.5rem
-}
-
-.pad70 {
-    padding-top: 1.75rem
-}
-
-.pad80 {
-    padding-top: 80px
-}
-
-.pad90 {
-    padding-top: 90px
-}
-
-.pad100 {
-    padding-top: 2.5rem
-}
-
-.pad160 {
-    padding-top: 4rem
-}
-
-.pad170 {
-    padding-top: 4.25rem
-}
-
-.pad185 {
-    padding-top: 4.625rem
-}
-
-.banner {
-    /* margin-top: 1.625rem */
-}
-
-.err,
-.main2arc,
-.mar-cen,
-.uuy,
-.xs-tt1 {
-    margin: 0 auto
-}
-
-.tt01 {
-    width: 13.05rem
-}
-
-.main1-tu,
-.main2,
-.main2-top {
-    width: 100%
-}
-
-.main2 {
-    background-color: #f8f3ef
-}
-
-.tt02 {
-    width: 11rem
-}
-
-.main2arc {
-    width: 15.48611111rem
-}
-
-.arc {
-    font-size: 0.5rem;
-    color: #8a6f54;
-    line-height: 0.65rem;
-    width: 90%
-}
-
-.xs-tt1 {
-    width: 11.125rem
-}
-
-.main2-b {
-    width: 100%
-}
-
-.err {
-    width: 96%;
-    border: 6px solid #dec7b6
-}
-
-.uuy {
-    width: 15.5rem;
-    height: 1.18055556rem
-}
-
-.uuy em {
-    width: 1.75rem;
-    height: 0.5rem;
-    border-bottom: 1px solid #996e4d;
-    float: left
-}
-
-.uuy p {
-    width: 11.25rem;
-    height: 100%;
-    line-height: 0.95rem;
-    font-size: 0.55rem;
-    float: left;
-    color: #996e4d
-}
-
-.sanjiao {
-    float: left;
-    width: 0;
-    height: 0;
-    border-top: 0.25rem solid transparent;
-    border-bottom: 0.25rem solid transparent;
-    margin-top: 0.3rem
-}
-
-.sanjiaol {
-    border-left: 0.325rem solid #996e4d
-}
-
-.sanjiaor {
-    border-right: 0.325rem solid #996e4d
-}
-
-.zixun {
-    width: 7.5rem;
-    height: 1.5rem;
-    background: url(https://img.hzshuangmei.com/m/wuchuang/zx-bg.png) center no-repeat;
-    background-size: contain;
-    margin: 0 auto;
-    font-size: 0.6rem;
-    line-height: 1.5rem;
-    color: #eee4dc
-}
-
-.main3 {
-    height: auto;
-    padding: 0 0.75rem;
-    background-color: #fff
-}
-
-.main3-tu1 {
-    width: 14rem
-}
-
-.main3 h4 {
-    color: #ab7a55;
-    font-size: 0.85rem;
-    line-height: 2rem
-}
-
-.main3 p,
-.main4-in p {
-    font-size: 0.5rem;
-    line-height: 0.65rem
-}
-
-.main3 p {
-    color: #666
-}
-
-.main3-tu2 {
-    width: 13.875rem
-}
-
-.main4 {
-    padding: 0 0.5rem;
-    background-color: #efe2d4
-}
-
-.tt03 {
-    width: 11.3rem
-}
-
-.main4-in {
-    width: 100%;
-    height: 10rem
-}
-
-.jz {
-    background: url(https://img.hzshuangmei.com/m/wuchuang/main4-tu1.jpg) top center no-repeat;
-    background-size: contain
-}
-
-.aq {
-    background: url(https://img.hzshuangmei.com/m/wuchuang/main4-tu2.jpg) top center no-repeat;
-    background-size: contain
-}
-
-.ks {
-    background: url(https://img.hzshuangmei.com/m/wuchuang/main4-tu3.jpg) top center no-repeat;
-    background-size: contain
-}
-
-.ft {
-    background: url(https://img.hzshuangmei.com/m/wuchuang/main4-tu4.jpg) top center no-repeat;
-    background-size: contain
-}
-
-.main4-in p {
-    color: #4d4945;
-    width: 6rem;
-    height: auto
-}
-
-.main5-in li h5,
-.main5-in li p {
-    color: #92541a;
-    text-align: center
-}
-
-.aq p {
-    margin-left: 0.5rem
-}
-
-.main4-in .p-right {
-    margin-left: auto
-}
-
-.tt04 {
-    width: 12.8rem
-}
-
-.main5 {
-    padding: 0 0.25rem
-}
-
-.main5-in {
-    background: url(https://img.hzshuangmei.com/m/wuchuang/main5-bg.jpg) top center no-repeat;
-    background-size: contain;
-    width: 100%;
-    height: 24.375rem
-}
-
-.main5-in li {
-    width: 5rem;
-    height: 3.475rem;
-    position: absolute
-}
-
-.main5-in li h5 {
-    font-size: 0.9rem;
-    line-height: 1.05rem
-}
-
-.main5-in li p {
-    font-size: 0.5rem
-}
-
-.main5-in .li1 {
-    top: 10rem;
-    left: 0.5rem
-}
-
-.main5-in .li2 {
-    top: 12.25rem;
-    right: 0;
-    text-align: right;
-    color: #fff;
-    width: 5.75rem
-}
-
-.main5-in .li3 {
-    top: 15rem;
-    left: 5rem
-}
-
-.main5-in .li4 {
-    top: 20.75rem;
-    left: 0
-}
-
-.main5-in .li5 {
-    top: 20.75rem;
-    right: 0
-}
-
-.main5-in .li6 {
-    top: 10rem;
-    left: 0.5rem
-}
-
-.main5-in .li2 h5,
-.main5-in .li2 p {
-    color: #fff
-}
-
-.zixunsj {
-    width: 5rem;
-    height: 1.5rem;
-    background: url(https://img.hzshuangmei.com/m/wuchuang/zx-2.png) center no-repeat;
-    background-size: contain;
-    margin: 0 auto
-}
-
-.anli-sj {
-    background-color: #eee5db;
-    width: 100%;
-    height: 28.5rem
-}
-
-.anli-sj ol {
-    width: 15.6rem;
-    height: 20rem;
-    margin: 0 auto;
-    padding-top: 1.75rem
-}
-
-.anli-sj ol li {
-    width: 7.8rem;
-    height: 9rem;
-    float: left
-}
-
-.anli-sj ol li img {
-    border: 0.125rem solid #fff;
-    width: 100%;
-    box-sizing: border-box
-}
-
-.anli-sj ol li p {
-    width: 3.75rem;
-    height: 0.9rem;
-    margin: 0 auto;
-    background-color: #c2915b;
-    border-radius: 5px;
-    text-align: center;
-    line-height: 0.9rem;
-    font-size: 0.55rem;
-    color: #fff
-}
-
-.zhuanjia {
-    padding: 0 0.25rem
-}
-
-.tt05 {
-    width: 10.275rem
-}
-
-.lijie {
-    width: 100%
-}
-
-.lijie-tu {
-    position: relative
-}
-
-.lijie-zi {
-    width: 6.6rem;
-    height: 1.6rem;
-    position: absolute;
-    top: 6.95rem;
-    left: 1.75rem
-}
-
-.lijie-zi p {
-    font-size: 0.5rem;
-    color: #000;
-    line-height: 0.65rem
-}
-
-.good,
-.good-r {
-    color: #ab7a55;
-    float: left
-}
-
-.good {
-    width: 1.75rem;
-    height: 2rem;
-    padding: 0.725rem 0 0.725rem 0.75rem;
-    border-right: 3px solid #ab7a55;
-    font-size: 0.75rem;
-    font-weight: 700
-}
-
-.lijie-arc {
-    background-color: #eee5dc;
-    width: 100%;
-    height: 7.5rem
-}
-
-.good-r {
-    font-size: 0.5rem;
-    line-height: 0.65rem;
-    width: 3.2rem;
-    height: 4.5rem;
-    padding: 0 0 0 0.375rem
-}
-
-.zhuanjia ul {
-    width: 8.5rem;
-    height: 4.875rem;
-    float: right
-}
-
-.zhuanjia ul li {
-    line-height: 0.75rem;
-    font-size: 0.5rem;
-    color: #5c5b5b
-}
-
-.padfoot {
-    height: 73px
-}
-
-.footer {
-    border: 1px solid #e1e1e1;
-    width: 100%;
-    font-size: 16px;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: #fafafa;
-    z-index: 9999
-}
+.uuy p,.zixun{text-align:center}.arc,.main3 p{text-indent:2em}.zixun,.zixunsj,img{display:block}*{margin:0;padding:0}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:400}li,ul{list-style:none}img{border:0}body{background-color:#fff;font-family:"微软雅黑"}em{font-style:normal}p,span{font-size:0.5rem}h3{font-size:0.6rem}a{color:#fff;border:none;text-decoration:none}.sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;clip:rect(0,0,0,0);border:0;overflow:hidden}.main2-top,.main5-in,.uuy{position:relative}.banner,.main1{width:100%}.main1,.main2,.main2-b,.main2-top,.main2arc{height:auto}.pad10{padding-top:10px}.pad20{padding-top:0.5rem}.pad30{padding-top:0.75rem}.pad50{padding-top:1.25rem}.pad60{padding-top:1.5rem}.pad70{padding-top:1.75rem}.pad80{padding-top:80px}.pad90{padding-top:90px}.pad100{padding-top:2.5rem}.pad160{padding-top:4rem}.pad170{padding-top:4.25rem}.pad185{padding-top:4.625rem}.banner{}.err,.main2arc,.mar-cen,.uuy,.xs-tt1{margin:0 auto}.tt01{width:13.05rem}.main1-tu,.main2,.main2-top{width:100%}.main2{background-color:#f8f3ef}.tt02{width:11rem}.main2arc{width:15.48611111rem}.arc{font-size:0.5rem;color:#8a6f54;line-height:0.65rem;width:90%}.xs-tt1{width:11.125rem}.main2-b{width:100%}.err{width:96%;border:6px solid #dec7b6}.uuy{width:15.5rem;height:1.18055556rem}.uuy em{width:1.75rem;height:0.5rem;border-bottom:1px solid #996e4d;float:left}.uuy p{width:11.25rem;height:100%;line-height:0.95rem;font-size:0.55rem;float:left;color:#996e4d}.sanjiao{float:left;width:0;height:0;border-top:0.25rem solid transparent;border-bottom:0.25rem solid transparent;margin-top:0.3rem}.sanjiaol{border-left:0.325rem solid #996e4d}.sanjiaor{border-right:0.325rem solid #996e4d}.zixun{width:7.5rem;height:1.5rem;background:url(https://img.hzshuangmei.com/m/wuchuang/zx-bg.png) center no-repeat;background-size:contain;margin:0 auto;font-size:0.6rem;line-height:1.5rem;color:#eee4dc}.main3{height:auto;padding:0 0.75rem;background-color:#fff}.main3-tu1{width:14rem}.main3 h4{color:#ab7a55;font-size:0.85rem;line-height:2rem}.main3 p,.main4-in p{font-size:0.5rem;line-height:0.65rem}.main3 p{color:#666}.main3-tu2{width:13.875rem}.main4{padding:0 0.5rem;background-color:#efe2d4}.tt03{width:11.3rem}.main4-in{width:100%;height:10rem}.jz{background:url(https://img.hzshuangmei.com/m/wuchuang/main4-tu1.jpg) top center no-repeat;background-size:contain}.aq{background:url(https://img.hzshuangmei.com/m/wuchuang/main4-tu2.jpg) top center no-repeat;background-size:contain}.ks{background:url(https://img.hzshuangmei.com/m/wuchuang/main4-tu3.jpg) top center no-repeat;background-size:contain}.ft{background:url(https://img.hzshuangmei.com/m/wuchuang/main4-tu4.jpg) top center no-repeat;background-size:contain}.main4-in p{color:#4d4945;width:6rem;height:auto}.main5-in li h5,.main5-in li p{color:#92541a;text-align:center}.aq p{margin-left:0.5rem}.main4-in .p-right{margin-left:auto}.tt04{width:12.8rem}.main5{padding:0 0.25rem}.main5-in{background:url(https://img.hzshuangmei.com/m/wuchuang/main5-bg.jpg) top center no-repeat;background-size:contain;width:100%;height:24.375rem}.main5-in li{width:5rem;height:3.475rem;position:absolute}.main5-in li h5{font-size:0.9rem;line-height:1.05rem}.main5-in li p{font-size:0.5rem}.main5-in .li1{top:10rem;left:0.5rem}.main5-in .li2{top:12.25rem;right:0;text-align:right;color:#fff;width:5.75rem}.main5-in .li3{top:15rem;left:5rem}.main5-in .li4{top:20.75rem;left:0}.main5-in .li5{top:20.75rem;right:0}.main5-in .li6{top:10rem;left:0.5rem}.main5-in .li2 h5,.main5-in .li2 p{color:#fff}.zixunsj{width:5rem;height:1.5rem;background:url(https://img.hzshuangmei.com/m/wuchuang/zx-2.png) center no-repeat;background-size:contain;margin:0 auto}.anli-sj{background-color:#eee5db;width:100%;height:28.5rem}.anli-sj ol{width:15.6rem;height:20rem;margin:0 auto;padding-top:1.75rem}.anli-sj ol li{width:7.8rem;height:9rem;float:left}.anli-sj ol li img{border:0.125rem solid #fff;width:100%;box-sizing:border-box}.anli-sj ol li p{width:3.75rem;height:0.9rem;margin:0 auto;background-color:#c2915b;border-radius:5px;text-align:center;line-height:0.9rem;font-size:0.55rem;color:#fff}.zhuanjia{padding:0 0.25rem}.tt05{width:10.275rem}.lijie{width:100%}.lijie-tu{position:relative}.lijie-zi{width:6.6rem;height:1.6rem;position:absolute;top:6.95rem;left:1.75rem}.lijie-zi p{font-size:0.5rem;color:#000;line-height:0.65rem}.good,.good-r{color:#ab7a55;float:left}.good{width:1.75rem;height:2rem;padding:0.725rem 0 0.725rem 0.75rem;border-right:3px solid #ab7a55;font-size:0.75rem;font-weight:700}.lijie-arc{background-color:#eee5dc;width:100%;height:7.5rem}.good-r{font-size:0.5rem;line-height:0.65rem;width:3.2rem;height:4.5rem;padding:0 0 0 0.375rem}.zhuanjia ul{width:8.5rem;height:4.875rem;float:right}.zhuanjia ul li{line-height:0.75rem;font-size:0.5rem;color:#5c5b5b}.padfoot{height:73px}.footer{border:1px solid #e1e1e1;width:100%;font-size:16px;position:fixed;bottom:0;left:0;right:0;background-color:#fafafa;z-index:9999}
