--- a/static.hzshuangmei.com/css/pc/wuchuang/css.css
+++ b/static.hzshuangmei.com/css/pc/wuchuang/css.css
@@ -1,506 +1,2 @@
 @charset "utf-8";
-.sr-only,
-img {
-    border: 0
-}
-
-.bn,
-.main1-tu {
-    max-width: 100%
-}
-
-.zixun,
-.zixun3,
-img {
-    display: block
-}
-
-* {
-    padding: 0;
-    margin: 0
-}
-
-body {
-    font-family: "微软雅黑";
-    background-color: #fff
-}
-
-.foot,
-.head .Tbody,
-body {
-    min-width: 1250px
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-size: 100%;
-    font-weight: 400
-}
-
-li,
-ul {
-    list-style: none
-}
-
-a {
-    text-decoration: none
-}
-
-.sr-only {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    clip: rect(0, 0, 0, 0);
-    overflow: hidden
-}
-
-.bn,
-.main1-tu,
-.main2,
-.tt02-bg,
-.tttext {
-    margin: 0 auto
-}
-
-.pad10 {
-    padding-top: 10px
-}
-
-.pad20 {
-    padding-top: 20px
-}
-
-.pad30 {
-    padding-top: 30px
-}
-
-.pad50 {
-    padding-top: 50px
-}
-
-.pad80 {
-    padding-top: 80px
-}
-
-.pad90 {
-    padding-top: 90px
-}
-
-.pad120 {
-    padding-top: 120px
-}
-
-.main1 {
-    width: 100%;
-    height: auto;
-    padding-top: 70px
-}
-
-.tt01 {
-    width: 603px;
-    height: 181px
-}
-
-.main2,
-.main2-top {
-    width: 100%;
-    height: auto
-}
-
-.main2,
-.main2-b {
-    max-width: 1920px
-}
-
-.main2-top {
-    position: relative
-}
-
-.main2arc,
-.xs-tt1 {
-    position: absolute;
-    left: 50%
-}
-
-.tt02-bg {
-    width: 100%
-}
-
-.main2arc {
-    width: 1115px;
-    height: auto;
-    bottom: 200px;
-    margin-left: -557px
-}
-
-.arc,
-.uuy p {
-    font-size: 18px;
-    color: #8a6f54;
-    line-height: 30px
-}
-
-.uuy p,
-.zixun {
-    font-size: 28px;
-    text-align: center
-}
-
-.arc:hover,
-.main5-in li:hover h5,
-.main5-in li:hover p,
-.uuy p:hover {
-    color: #ce8248;
-    cursor: default
-}
-
-.main3-arc p:hover,
-.main4-arc:hover {
-    color: #44413f;
-    cursor: default
-}
-
-.main5 ol li:hover p {
-    color: #ececec;
-    cursor: default;
-    box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125)
-}
-
-.xs-tt1 {
-    width: 484px;
-    height: 79px;
-    bottom: 50px;
-    margin-left: -242px
-}
-
-.main3,
-.uuy {
-    position: relative
-}
-
-.err,
-.main2-b,
-.uuy {
-    margin: 0 auto
-}
-
-.main2-b {
-    width: 100%;
-    height: 603px;
-    background-color: #E8DED2
-}
-
-.err {
-    width: 1152px;
-    height: 325px;
-    border: 6px solid #dec7b6
-}
-
-.uuy {
-    width: 1164px;
-    height: 85px
-}
-
-.uuy em {
-    width: 278px;
-    height: 32px;
-    border-bottom: 1px solid #996e4d;
-    float: left
-}
-
-.uuy p {
-    width: 578px;
-    height: 100%;
-    line-height: 60px;
-    float: left;
-    color: #996e4d
-}
-
-.sanjiao {
-    float: left;
-    width: 0;
-    height: 0;
-    border-top: 10px solid transparent;
-    border-bottom: 10px solid transparent;
-    margin-top: 22px
-}
-
-.main3,
-.zixun {
-    margin: 0 auto
-}
-
-.sanjiaol {
-    border-left: 15px solid #996e4d
-}
-
-.sanjiaor {
-    border-right: 15px solid #996e4d
-}
-
-.zixun {
-    width: 380px;
-    height: 54px;
-    background: url(https://img.hzshuangmei.com/pc/wuchuang/zx-bg.png) center no-repeat;
-    line-height: 54px;
-    color: #eee4dc
-}
-
-.zixun:hover {
-    color: #fff
-}
-
-.main3 {
-    width: 1210px;
-    height: 1200px;
-    background-color: #fff
-}
-
-.lijie,
-.lj-intr,
-.main3-arc,
-.main3-tu1,
-.main3-tu2,
-.zixun2 {
-    position: absolute
-}
-
-.lijie {
-    width: 698px;
-    height: 888px;
-    top: 95px;
-    left: 0
-}
-
-.lj-intr {
-    width: 260px;
-    height: 70px;
-    top: 410px;
-    left: 65px
-}
-
-.lj-intr p {
-    line-height: 24px;
-    color: #000;
-    font-size: 20px
-}
-
-.main3-tu1 {
-    top: 0;
-    right: 0
-}
-
-.main3-arc {
-    width: 433px;
-    height: 311px;
-    top: 350px;
-    right: 20px
-}
-
-.main3-arc h3 {
-    font-size: 26px;
-    color: #ab7a55;
-    font-weight: 700
-}
-
-.main3-arc p {
-    font-size: 18px;
-    color: #666;
-    line-height: 28px
-}
-
-.main3-tu2 {
-    width: 556px;
-    height: 223px;
-    top: 715px;
-    right: 25px
-}
-
-.zixung {
-    width: 349px;
-    height: 85px;
-    background: url(https://img.hzshuangmei.com/pc/wuchuang/zx-2.png) center no-repeat;
-    -webkit-transition: all .2s;
-    transition: all .2s
-}
-
-.zixung:hover {
-    -webkit-transform: scale(.8, .8);
-    transform: scale(.8, .8)
-}
-
-.zixun2 {
-    bottom: 90px;
-    left: 50%;
-    margin-left: -174px
-}
-
-.main5,
-.main5-in {
-    position: relative
-}
-
-.main4 {
-    width: 100%;
-    height: 1495px;
-    background-color: #eee1d1
-}
-
-.tt03 {
-    width: 452px;
-    height: 152px;
-    margin: 0 auto
-}
-
-.main4-in {
-    width: 1064px;
-    height: 1180px;
-    margin: 0 auto
-}
-
-.main4-in li {
-    width: 464px;
-    height: 639px;
-    float: left;
-    margin-right: 125px
-}
-
-.main4-in li img {
-    width: 100%
-}
-
-.main4-in li.nomargin {
-    margin: 0
-}
-
-.main4-arc,
-.main5,
-.tt04,
-.zixun3 {
-    margin: 0 auto
-}
-
-.main4-arc {
-    width: 360px;
-    height: auto;
-    font-size: 16px;
-    line-height: 24px;
-    color: #79746e;
-    padding-left: 58px
-}
-
-.main5-in .li4 h5,
-.main5-in .li5 h5 {
-    padding-left: 65px
-}
-
-.main5 {
-    width: 1197px;
-    height: 2100px;
-    background-color: #fff
-}
-
-.tt04 {
-    width: 575px;
-    height: 163px
-}
-
-.main5-in {
-    width: 1197px;
-    height: 600px;
-    background: url(https://img.hzshuangmei.com/pc/wuchuang/main5-bg.jpg) center no-repeat
-}
-
-.main5-in li {
-    width: 230px;
-    height: 106px;
-    position: absolute
-}
-
-.main5-in li h5 {
-    font-size: 30px;
-    color: #92541a;
-    line-height: 40px
-}
-
-.main5-in li p {
-    font-size: 18px;
-    color: #92541a;
-    line-height: 22px
-}
-
-.li1 {
-    top: 430px;
-    left: 15px
-}
-
-.li2 {
-    top: 500px;
-    left: 473px
-}
-
-.main5-in .li2 h5,
-.main5-in .li2 p {
-    color: #fff;
-    text-align: right
-}
-
-.li3 {
-    top: 253px;
-    left: 675px
-}
-
-.main5-in .li3 h5 {
-    text-align: right
-}
-
-.li4 {
-    top: 59px;
-    right: 0
-}
-
-.li5 {
-    top: 449px;
-    right: 0
-}
-
-.main5 ol {
-    width: 1183px;
-    height: 626px;
-    background-color: #eee5db;
-    padding: 14px 0 0 14px
-}
-
-.main5 ol li {
-    width: 387px;
-    height: 307px;
-    float: left
-}
-
-.main5 ol li img {
-    width: 380px;
-    height: 226px;
-    border: 7px solid #fff
-}
-
-.main5 ol li p {
-    width: 150px;
-    height: 30px;
-    text-align: center;
-    line-height: 30px;
-    color: #fff;
-    border-radius: 10px;
-    margin: 0 auto;
-    background-color: #c2915b;
-    font-size: 16px
-}
-
-.main5 ol li .noborder-r {
-    border-right: 0
-}
+.sr-only,img{border:0}.bn,.main1-tu{max-width:100%}.zixun,.zixun3,img{display:block}*{padding:0;margin:0}body{font-family:"微软雅黑";background-color:#fff}.foot,.head .Tbody,body{min-width:1250px}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:400}li,ul{list-style:none}a{text-decoration:none}.sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;clip:rect(0,0,0,0);overflow:hidden}.bn,.main1-tu,.main2,.tt02-bg,.tttext{margin:0 auto}.pad10{padding-top:10px}.pad20{padding-top:20px}.pad30{padding-top:30px}.pad50{padding-top:50px}.pad80{padding-top:80px}.pad90{padding-top:90px}.pad120{padding-top:120px}.main1{width:100%;height:auto;padding-top:70px}.tt01{width:603px;height:181px}.main2,.main2-top{width:100%;height:auto}.main2,.main2-b{max-width:1920px}.main2-top{position:relative}.main2arc,.xs-tt1{position:absolute;left:50%}.tt02-bg{width:100%}.main2arc{width:1115px;height:auto;bottom:200px;margin-left:-557px}.arc,.uuy p{font-size:18px;color:#8a6f54;line-height:30px}.uuy p,.zixun{font-size:28px;text-align:center}.arc:hover,.main5-in li:hover h5,.main5-in li:hover p,.uuy p:hover{color:#ce8248;cursor:default}.main3-arc p:hover,.main4-arc:hover{color:#44413f;cursor:default}.main5 ol li:hover p{color:#ececec;cursor:default;box-shadow:inset 0 3px 5px rgba(0,0,0,.125)}.xs-tt1{width:484px;height:79px;bottom:50px;margin-left:-242px}.main3,.uuy{position:relative}.err,.main2-b,.uuy{margin:0 auto}.main2-b{width:100%;height:603px;background-color:#E8DED2}.err{width:1152px;height:325px;border:6px solid #dec7b6}.uuy{width:1164px;height:85px}.uuy em{width:278px;height:32px;border-bottom:1px solid #996e4d;float:left}.uuy p{width:578px;height:100%;line-height:60px;float:left;color:#996e4d}.sanjiao{float:left;width:0;height:0;border-top:10px solid transparent;border-bottom:10px solid transparent;margin-top:22px}.main3,.zixun{margin:0 auto}.sanjiaol{border-left:15px solid #996e4d}.sanjiaor{border-right:15px solid #996e4d}.zixun{width:380px;height:54px;background:url(https://img.hzshuangmei.com/pc/wuchuang/zx-bg.png) center no-repeat;line-height:54px;color:#eee4dc}.zixun:hover{color:#fff}.main3{width:1210px;height:1200px;background-color:#fff}.lijie,.lj-intr,.main3-arc,.main3-tu1,.main3-tu2,.zixun2{position:absolute}.lijie{width:698px;height:888px;top:95px;left:0}.lj-intr{width:260px;height:70px;top:410px;left:65px}.lj-intr p{line-height:24px;color:#000;font-size:20px}.main3-tu1{top:0;right:0}.main3-arc{width:433px;height:311px;top:350px;right:20px}.main3-arc h3{font-size:26px;color:#ab7a55;font-weight:700}.main3-arc p{font-size:18px;color:#666;line-height:28px}.main3-tu2{width:556px;height:223px;top:715px;right:25px}.zixung{width:349px;height:85px;background:url(https://img.hzshuangmei.com/pc/wuchuang/zx-2.png) center no-repeat;-webkit-transition:all .2s;transition:all .2s}.zixung:hover{-webkit-transform:scale(.8,.8);transform:scale(.8,.8)}.zixun2{bottom:90px;left:50%;margin-left:-174px}.main5,.main5-in{position:relative}.main4{width:100%;height:1495px;background-color:#eee1d1}.tt03{width:452px;height:152px;margin:0 auto}.main4-in{width:1064px;height:1180px;margin:0 auto}.main4-in li{width:464px;height:639px;float:left;margin-right:125px}.main4-in li img{width:100%}.main4-in li.nomargin{margin:0}.main4-arc,.main5,.tt04,.zixun3{margin:0 auto}.main4-arc{width:360px;height:auto;font-size:16px;line-height:24px;color:#79746e;padding-left:58px}.main5-in .li4 h5,.main5-in .li5 h5{padding-left:65px}.main5{width:1197px;height:2100px;background-color:#fff}.tt04{width:575px;height:163px}.main5-in{width:1197px;height:600px;background:url(https://img.hzshuangmei.com/pc/wuchuang/main5-bg.jpg) center no-repeat}.main5-in li{width:230px;height:106px;position:absolute}.main5-in li h5{font-size:30px;color:#92541a;line-height:40px}.main5-in li p{font-size:18px;color:#92541a;line-height:22px}.li1{top:430px;left:15px}.li2{top:500px;left:473px}.main5-in .li2 h5,.main5-in .li2 p{color:#fff;text-align:right}.li3{top:253px;left:675px}.main5-in .li3 h5{text-align:right}.li4{top:59px;right:0}.li5{top:449px;right:0}.main5 ol{width:1183px;height:626px;background-color:#eee5db;padding:14px 0 0 14px}.main5 ol li{width:387px;height:307px;float:left}.main5 ol li img{width:380px;height:226px;border:7px solid #fff}.main5 ol li p{width:150px;height:30px;text-align:center;line-height:30px;color:#fff;border-radius:10px;margin:0 auto;background-color:#c2915b;font-size:16px}.main5 ol li .noborder-r{border-right:0}
