--- a/static.hzshuangmei.com/css/pc/sypjgjm/css/css.css
+++ b/static.hzshuangmei.com/css/pc/sypjgjm/css/css.css
@@ -17,7 +17,9 @@ a {
 
 a:hover {
   text-decoration: none; }
-
+a:hover{
+  text-decoration: none;
+}
 img {
   display: block;
   border: none; }
@@ -322,6 +324,8 @@ div.part2 {
         .part4 .main .contain .contact .prise span,
         .part4 .main .contain .contact .appointement span {
           display: block;
+          height: 36px;
+          font-size: 24px;
           text-align: center;
           width: 100%; }
       .part4 .main .contain .contact .prise {
