--- a/static.hzshuangmei.com/css/pc/sypjgjm/css/css.css
+++ b/static.hzshuangmei.com/css/pc/sypjgjm/css/css.css
@@ -18,7 +18,7 @@ a {
 a:hover {
   text-decoration: none; }
 a:hover{
-  text-decoration: none;
+  text-decoration: none!important;
 }
 img {
   display: block;
