--- a/static.hzshuangmei.com/css/pc/sypjgjm/css/css.css
+++ b/static.hzshuangmei.com/css/pc/sypjgjm/css/css.css
@@ -466,22 +466,24 @@ div.part2 {
       width: 153px;
       height: 50px;
       float: left; }
-      .part6 .contact .prise p,
-      .part6 .contact .appointement p {
+      .part6 .contact .prise span,
+      .part6 .contact .appointement span {
+        font-size: 18px;
+        display: block;
         text-align: center;
         width: 153px;
         line-height: 50px; }
     .part6 .contact .prise {
       border: 2px solid #fd3358;
       margin-left: 680px; }
-      .part6 .contact .prise p {
+      .part6 .contact .prise span{
         color: #fd3358;
         margin-left: 0; }
     .part6 .contact .appointement {
       background: #fd3358;
       margin-left: 854px;
       margin-top: -50px; }
-      .part6 .contact .appointement p {
+      .part6 .contact .appointement span {
         color: #fff;
         margin-left: 0; }
 .foot{
